quic/s2n-quic-core/src/transport/parameters/snapshots/s2n_quic_core__transport__parameters__snapshot_tests__ServerTransportParameters default.snap
---
source: quic/s2n-quic-core/src/transport/parameters/mod.rs
expression: default_value
---
TransportParameters {
    max_idle_timeout: MaxIdleTimeout(
        VarInt(
            0,
        ),
    ),
    max_udp_payload_size: MaxUdpPayloadSize(
        VarInt(
            65527,
        ),
    ),
    initial_max_data: InitialMaxData(
        VarInt(
            0,
        ),
    ),
    initial_max_stream_data_bidi_local: InitialMaxStreamDataBidiLocal(
        VarInt(
            0,
        ),
    ),
    initial_max_stream_data_bidi_remote: InitialMaxStreamDataBidiRemote(
        VarInt(
            0,
        ),
    ),
    initial_max_stream_data_uni: InitialMaxStreamDataUni(
        VarInt(
            0,
        ),
    ),
    initial_max_streams_bidi: InitialMaxStreamsBidi(
        VarInt(
            0,
        ),
    ),
    initial_max_streams_uni: InitialMaxStreamsUni(
        VarInt(
            0,
        ),
    ),
    ack_delay_exponent: AckDelayExponent(
        3,
    ),
    max_ack_delay: MaxAckDelay(
        VarInt(
            25,
        ),
    ),
    migration_support: Enabled,
    active_connection_id_limit: ActiveConnectionIdLimit(
        VarInt(
            2,
        ),
    ),
    original_destination_connection_id: OriginalDestinationConnectionId(
        ConnectionId([]),
    ),
    stateless_reset_token: None,
    preferred_address: None,
    initial_source_connection_id: None,
    retry_source_connection_id: None,
}
