quic/s2n-quic-core/src/transport/parameters/snapshots/s2n_quic_core__transport__parameters__snapshot_tests__client_snapshot_test.snap
---
source: quic/s2n-quic-core/src/transport/parameters/mod.rs
expression: encoded_output
---
[
    1,
    1,
    42,
    3,
    2,
    69,
    220,
    4,
    1,
    42,
    5,
    1,
    42,
    6,
    1,
    42,
    7,
    1,
    42,
    8,
    1,
    42,
    9,
    1,
    42,
    10,
    1,
    2,
    11,
    1,
    42,
    12,
    0,
    14,
    1,
    42,
]
