quic/s2n-quic-core/src/transport/parameters/snapshots/s2n_quic_core__transport__parameters__snapshot_tests__server_snapshot_with_empty_initial_scid_test.snap
---
source: quic/s2n-quic-core/src/transport/parameters/mod.rs
expression: encoded_output
---
[
    15,
    0,
]
